Document PPDG/src/objects/Form_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DataType__c</fullName>
        <label>DataType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_name__c</fullName>
        <label>Form name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_field__c</fullName>
        <label>Sobject field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Form Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DataType__c</columns>
        <columns>Field__c</columns>
        <columns>Form_name__c</columns>
        <columns>Sobject_field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>callback</fullName>
        <columns>NAME</columns>
        <columns>DataType__c</columns>
        <columns>Field__c</columns>
        <columns>Form_name__c</columns>
        <columns>Sobject_field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_name__c</field>
            <operation>equals</operation>
            <value>callback</value>
        </filters>
        <label>callback</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>complaint</fullName>
        <columns>NAME</columns>
        <columns>DataType__c</columns>
        <columns>Field__c</columns>
        <columns>Form_name__c</columns>
        <columns>Sobject_field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_name__c</field>
            <operation>equals</operation>
            <value>complaint</value>
        </filters>
        <label>complaint</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>generalenquiries</fullName>
        <columns>NAME</columns>
        <columns>DataType__c</columns>
        <columns>Field__c</columns>
        <columns>Form_name__c</columns>
        <columns>Sobject_field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_name__c</field>
            <operation>equals</operation>
            <value>generalenquiries</value>
        </filters>
        <label>generalenquiries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>goodmoney</fullName>
        <columns>NAME</columns>
        <columns>DataType__c</columns>
        <columns>Field__c</columns>
        <columns>Form_name__c</columns>
        <columns>Sobject_field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_name__c</field>
            <operation>equals</operation>
            <value>goodmoney</value>
        </filters>
        <label>goodmoney</label>
        <language>en_US</language>
    </listViews>
</CustomObject>